# bidsval

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  cli-reference.md  comparison-vs-deno.md  index.md  internals.md  output-formats.md  schema-selection.md  usage.md
src/bidsval/: __init__.py  cli.py  issues.py  report.py  validate.py
src/bidsval/context/: __init__.py  associations.py  builder.py  entities.py  inheritance.py  loaders.py
src/bidsval/expr/: __init__.py  evaluator.py  functions.py
src/bidsval/files/: __init__.py  bidsignore.py  tree.py
src/bidsval/render/: __init__.py  html.py  json.py  sarif.py  text.py
src/bidsval/rules/: __init__.py  bespoke.py  citation.py  column_types.py  dataset_checks.py  engine.py  filenames.py  guidance.py  integrity.py  tables.py  values.py
src/bidsval/schema/: __init__.py  cache.py  introspect.py  resolve.py
tests/: test_cli.py  test_dataset_checks.py  test_engine_units.py  test_expressions.py  test_filenames.py  test_functions.py  test_inheritance_and_tabular.py  test_integrity_and_guidance.py  test_layers.py  test_models.py  test_real_data.py  test_recursive.py  test_render.py  test_robustness.py  test_schema_resolve.py  test_validate.py  test_value_types.py
