[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bidsval"
version = "0.0.2"
description = "A schema-driven, pydantic-typed, in-process BIDS validator."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "bidsval contributors" }]
keywords = ["BIDS", "validation", "neuroimaging", "schema", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

# Dependencies.
# Bounds strategy (same as BIDS-Manager):
#   lower bound = oldest version that works with any supported Python (3.10+).
#   upper bound = latest version tested in the reference env. On older Pythons
#                 pip picks the newest release that fits both the version range
#                 AND that Python's compatibility.
# The content readers (nibabel, pandas, mne) are REQUIRED, not optional, so a
# default install validates file contents out of the box. The loaders still
# degrade safely (return empty/None) if a reader is ever missing or a file is
# malformed, so a rule that needs that content simply does not fire.
dependencies = [
    # Schema engine: the BIDS schema and its expression-language parser. The
    # keystone of the architecture; all BIDS knowledge enters through here.
    "bidsschematools>=1.0,<=1.2.2",

    # Strongly-typed, serialisable result model (Issue / ValidationReport).
    "pydantic>=2,<=2.13.4",

    # Content readers.
    "nibabel>=5.0,<=5.4.2",   # NIfTI headers (read by default)
    "pandas>=2.0,<3.0",       # TSV columns (pandas 3 changes string dtype: cap < 3.0)
    "mne>=1.6,<=1.12.1",      # EEG / MEG / iEEG readers (for forthcoming content checks)
    "pyyaml>=5.4,<=6.0.3",    # CITATION.cff parsing
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
bidsval = "bidsval.cli:main"

[project.urls]
Homepage = "https://github.com/karellopez/bidsval"
Repository = "https://github.com/karellopez/bidsval"
Issues = "https://github.com/karellopez/bidsval/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the bundled schema(s) so the default schema is pinned to a known BIDS
# version and works fully offline, independent of the installed bidsschematools.
bidsval = ["schema/bundled/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, widely-used set: pycodestyle errors, pyflakes, isort, pyupgrade,
# and a few bugbear checks. Kept intentionally modest so the rules help rather
# than nag.
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The HTML renderer embeds a CSS/HTML template; long template lines are fine.
"src/bidsval/render/html.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
